# ContestSet

./: CMakeLists.txt
algo/geom/: fract0.cpp  geom_int.cpp  moder.cpp
algo/geom/algebra/: algebra.cpp
algo/geom/geom2d/: geom2d.cpp
algo/geom/geom3d/: geom3d.cpp
algo/geom/line and point/: algo.cpp
algo/geom/Выпуклая оболочка/: algo.cpp
algo/graph/: topsort.cpp
algo/graph/lca/ДО/: algo.cpp
algo/graph/lca/Двоичный подъём/: algo.cpp
algo/graph/min cost flow/: algo.cpp
algo/graph/Запросы на путях в дереве/Минимум на пути/: algo.cpp
algo/graph/Запросы на путях в дереве/Сумма на пути/: algo.cpp
algo/graph/Запросы на путях в дереве/Сумма на пути, обновление ребра/: algo.cpp
algo/graph/Макс поток/last version/: algo.cpp
algo/graph/Макс поток/Эдмонс-Карп (V^3E, можно оптимайзить до VE^2 )/: algo.cpp  input.txt
algo/graph/Максимальное паросочетание/Кун (n^3)/: algo.cpp  input.txt
algo/graph/Минимальное остовное и подобное/Краскал (с СНМ)/: algo.cpp
algo/graph/Минимальное остовное и подобное/СНМ/: algo.cpp
algo/graph/Мосты и точки сочленения/Дерево мостов/: algo.cpp
algo/ДП/matrix_optimization/: algo.cpp  matrdp.cpp
algo/ДП/mx,sum,kol/: algo.cpp
algo/ДП/Максимальный подпалиндром/: algo.cpp
algo/ДП/Наибольшая возрастающая подпоследовательность/: algo.cpp
algo/ДП/Наибольшая общая возрастающая подпоследовательность/: algo.cpp
algo/ДП/по профилю/: algo.cpp
algo/Длинка/: bigint.cpp  main.cpp
algo/Инверсии/Остаток от деление на 2/: algo.cpp
algo/Инверсии/Через дерево отрезков (бесполезно)/: algo.cpp
algo/Инверсии/Через сортировку слиянием/: algo.cpp
algo/Инверсии/в перестановке фенвиком/: algo.cpp
algo/Матрички/n-ый член Фибоначчи/: algo.cpp
algo/Матрички/Количество последовательностей длины n, каждое число которых меньше либо равно k и их сумма кратна m/: algo.cpp
algo/Матрички/Количиство путей длины k/: algo.cpp
algo/Матрички/Стандарты/: algo.cpp
algo/Сортировки/Cлиянием/: algo.cpp
algo/Сортировки/K-ая порядковая/: algo.cpp
algo/Сортировки/Быстрая/: algo.cpp
algo/Строки/Z-функция/: algo.cpp
algo/Строки/Ахо-Корасик/: algo.cpp
algo/Строки/Бор/: algo.cpp
algo/Строки/Префикс-функция/: algo.cpp
algo/Строки/Суффиксный массив/: sufmas.cpp
algo/Строки/Хэши/: A.cpp  cnt_substr_palindrom.cpp  hash.cpp  min_lex.cpp
algo/Структуры/Sparse table/: algo.cpp
algo/Структуры/sqrt декомпозиция/: algo.cpp
algo/Структуры/Минимум в очереди/: algo.cpp
algo/Структуры/Подотрезок с макс суммой/: algo.cpp
algo/Умножение многочленов/: algo.cpp
contest/: A.cpp  C.cpp  D.cpp  E.cpp  I.cpp  K.cpp  L.cpp
tools/: new_context.sh  template.cpp
(+45 files in other folders)
