cmake_minimum_required(VERSION 3.15)
project(MyApp)

set(CMAKE_CXX_STANDARD 11)

add_executable(A contest/A.cpp)
add_executable(B contest/B.cpp)
add_executable(C contest/C.cpp)
add_executable(D contest/D.cpp)
add_executable(E contest/E.cpp)
add_executable(F contest/F.cpp)
add_executable(G contest/G.cpp)
add_executable(H contest/H.cpp)
add_executable(I contest/I.cpp)
add_executable(J contest/J.cpp)
add_executable(K contest/K.cpp)
add_executable(L contest/L.cpp)
add_executable(algo algo/geom/geom2d/geom2d.cpp)
add_executable(template tools/template.cpp)
add_executable(algebra algo/geom/algebra/algebra.cpp)
add_executable(geom3d algo/geom/geom3d/geom3d.cpp)
add_executable(geom2d algo/geom/geom2d/geom2d.cpp)
add_executable(hash algo/Строки/Хэши/hash.cpp)
add_executable(sufmas "algo/Строки/Суффиксный массив/sufmas.cpp")
add_executable(matrdp algo/ДП/matrix_optimization/matrdp.cpp)
add_executable(bigint algo/Длинка/bigint.cpp)
add_executable(topsort algo/graph/topsort.cpp)
add_executable(geom_int algo/geom/geom_int.cpp)
add_executable(fract algo/geom/fract0.cpp)
add_executable(moder algo/geom/moder.cpp)
add_executable(do "algo/Структуры/ДО/Минимум/Минимум/Обновление элемента/do.cpp")